--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,8 @@
 
 
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
+    RewriteRule ^api/(.*)$ RouterApi.php?resource=$1 [QSA,L,END]
+
     RewriteRule ^(.*)$ Router.php?action=$1 [QSA,L]
 
 </IfModule>
